# EFNet-Services

./: ChangeLog  Makefile.in  configure  configure.in
CVS/: Entries
daemon/: Makefile.in  commands.c  conf.c  conn.c  hash.c  mempool.c  misc.c  module.c  queue.c  services.c  timedcbs.c
daemon/CVS/: Entries  Repository  Root
docs/: BUGS  README  TODO  example.conf
docs/CVS/: Entries  Repository
include/: commands.h  conf.h  conn.h  hash.h  mempool.h  misc.h  module.h  queue.h  services.h  setup.h.in  timedcbs.h
include/CVS/: Entries  Repository  Template
modules/CVS/: Entries  Repository
modules/admin/: Makefile.in  admins.conf  mod_admin.c  mod_admin.h
modules/admin/CVS/: Entries  Repository
modules/admindb/: Makefile.in  admindb.c  admindb.h  admindb_add.c  admindb_create.c  admindb_del.c  admindb_dump.c  admindb_find.c  admindb_import.c  admindb_info.c  admindb_lookup.c  admindb_setexpire.c  admindb_setpasswd.c
modules/admindb/CVS/: Entries  Repository
modules/chanfix/: Makefile.in  chanfix.conf  mod_chanfix.c
modules/chanfix/CVS/: Entries  Repository
modules/chanfixdb/: Makefile.in  chanfixdb.c  chanfixdb.h  chanfixdb_chandump.c  chanfixdb_create.c  chanfixdb_dump.c  chanfixdb_import.c  chanfixdb_info.c  chanfixdb_repair.c  chanfixdb_roll.c  chanfixdb_sort.c  chanfixdb_test.c
modules/chanfixdb/CVS/: Entries  Repository
modules/chanjupe/: Makefile.in  chanjupe.conf  mod_chanjupe.c
modules/chanjupe/CVS/: Entries  Repository
modules/crc32/: Makefile.in  crc32.c  crc32.h
modules/crc32/CVS/: Entries  Repository
modules/debug/: Makefile.in  mod_debug.c
modules/debug/CVS/: Entries  Repository
modules/jupes/: Makefile.in  jupes.conf  mod_jupes.c  mod_jupes.h
modules/jupes/CVS/: Entries  Repository
modules/uhjupe/: Makefile.in  mod_uhjupe.c  uhjupe.conf
modules/uhjupe/CVS/: Entries  Repository
